--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                     <img src="images/nav_logo.svg" alt="">
                 </a>
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#">Bosh sahifa</a></li>
-                    <li class="nav__item"><a href="#">Xizmatlar</a></li>
+                    <li class="nav__item"><a href="/index.html">Bosh sahifa</a></li>
+                    <li class="nav__item"><a href="./pages/services.html">Xizmatlar</a></li>
                     <li class="nav__item"><a href="#">Portfolio</a></li>
                     <li class="nav__item"><a href="#">Jamoa</a></li>
                     <li class="nav__item"><a href="#">Blog</a></li>
@@ -150,8 +150,8 @@
 
         <!-- orders -->
         <section id="order">
-            <div class="order">
                 <div class="container">
+                    <div class="order">
                     <h2 class="order__text">
                         Buyurtma berish
                     </h2>
